k8s/job-stats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-stats
  namespace: microservices-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-stats
  template:
    metadata:
      labels:
        app: job-stats
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3002"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: job-stats
          image: sandipsamanta/job-stats:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: job-stats
  namespace: microservices-monitoring
  labels:
    app: job-stats
spec:
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: 3002
      name: metrics
  selector:
    app: job-stats
